Platform 1.10

* [Bug] DiscoveryBinder.bindDiscoveredHttpClient() exporting HttpClient
  metrics with wrong name.

Platform 1.09

* Deprecated APIs removed

  - Bootstrap public constructors
  - ConfigAssertions.assertDefaults()
  - ConfigAssertions.assertDeprecatedEquivalence()
  - "node.binary-spec" and "node.config-spec" configuration options
  - MeterStat
  - TimedStat
  - Duration.convertTo()

* Guava 17 compatibility

  We reverted use of features preventing running with Guava 17.

* Library upgrades

  - slf4j to 1.7.8

Platform 1.08

* Configuration module defaults

  Guice modules may now override default configuration values by implementing
  ConfigurationDefaultingModule.getConfigurationDefaults(). Such defaults
  override those in the config classes but are themselves overridden by
  Bootstrap.withApplicationDefaults().

* AsyncSemaphore

  AsyncSemaphore is a non-blocking concurrency throttler for asynchronous
  tasks. It guarantees that no more than a fixed number of asynchronous tasks
  will be outstanding at any point in time without blocking any submission
  threads. Task completion is determined by a ListenableFuture returned by the
  supplied submitter function.

* Discovery read timeout

  We reduced the discovery client's default read timeout to 5 seconds. This
  is to avoid announcements timing out of Discovery when one or more
  Discovery servers hang.

* HttpClient request queue size default change

  We reduced the http-client.max-requests-queued-per-destination default to
  20. We recommend this be set to the same value as
  http-client.max-connections-per-server as larger values can cause requests
  to queue for inordinate amounts of time.

* Stack traces in HTTP error responses

  The HTTP server now shows stack traces in error responses if
  "http-server.show-stack-trace" is set to "true".

* Node ID logged on startup

* [Bug] HttpClient metric names now start with "HttpClient" instead of
  "AsyncHttpClient".
