@@ -1,5 +1,7 @@
 Platform 1.10
 
+* [Bug] NPE if config class bound both with and without a config prefix.
+
 * [Bug] DiscoveryBinder.bindDiscoveredHttpClient() exporting HttpClient
   metrics with wrong name.
 
